# media-browser

./: .gitignore  Cargo.lock_old  Cargo.toml  README.md  Todo.md  justfile
cosmic-media-browser-applet/: Cargo.toml
cosmic-media-browser-applet/src/: main.rs
debian/: changelog  control  copyright  rules
i18n/de/: cosmic_media_browser.ftl  media_browser.ftl
i18n/en/: cosmic_media_browser.ftl  media_browser.ftl
i18n/sv/: media_browser.ftl
res/: MediaBrowser.desktop  MediaBrowser.metainfo.xml  eu.fangornsrealm.MediaBrowser.desktop
src/: app.rs  audio.rs  clipboard.rs  cmd.rs  config.rs  dialog.rs  image.rs  key_bind.rs  lib.rs  localize.rs  main.rs  menu.rs  mime_app.rs  mime_icon.rs  mouse_area.rs  operation.rs  parsers.rs  scanmetadata.rs  spawn_detached.rs  sql.rs  tab.rs  thumbnails.rs  video.rs
src/audio/: Readme.md  audio.rs  audio_player.rs  audio_view.rs  coverart.rs  mod.rs  pipeline.rs
src/image/: Readme.md  image.rs  image_player.rs  image_view.rs  mod.rs
src/mounter/: gvfs.rs  mod.rs
src/operation/: controller.rs  mod.rs  reader.rs  recursive.rs
src/video/: Readme.md  mod.rs  pipeline.rs  video.rs  video_player.rs  video_view.rs
