[package]
name = "cosmic-media-browser"
version = "0.1.0"
authors = ["Alexander Schwarzkopf <schwarzkopf.alexander@web.de>"]
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.71"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
audiotags = "0.5"
bytes = "1.9.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "5.0.1"
env_logger = "0.11"
file-format = {version = "0.26.0", features = ["reader"]}
freedesktop_entry_parser = "1.3"
fs_extra = { git = "https://github.com/pop-os/fs_extra.git" }
gio = { version = "0.20.6", optional = true }
glib = { version = "0.20.6", optional = true }
glob = "0.3"
gstreamer = "0.23"
gstreamer-app = "0.23" # appsink
gstreamer-base = "0.23" # basesrc
gstreamer-pbutils = "0.23"
gstreamer-tag = "0.23"
gst-plugin-matroska = "0.0.0"
html-escape = "0.2.13"
icu_collator = "1.5"
icu_provider = { version = "1.5", features = ["sync"] }
ignore = "0.4"
image = "0.25.5"
imagesize = "0.13.0"
lazy_static = "1"
libc = "0.2"
log = "0.4"
mime_guess = "2"
nom-exif = "2.2.1"
notify-debouncer-full = "0.3"
notify-rust = { version = "4", optional = true }
once_cell = "1.20.2"
open = "5.3.1"
paste = "1.0"
rayon = "1"
regex = "1"
rusqlite = {version = "0.32.1", features = ["bundled", "chrono"]}
rustc-hash = "2.1.0"
serde = { version = "1", features = ["serde_derive"] }
shlex = { version = "1.3" }
thiserror = "2.0.3"
tokio = { version = "1", features = ["sync", "time"] }
trash = { git = "https://github.com/jackpot51/trash-rs.git", branch = "cosmic" }
url = "2"
walkdir = "2.5.0"
wayland-client = { version = "0.31.7", optional = true }
xdg = { version = "2.5.2", optional = true }
xdg-mime = "0.3"
xml = "0.8.16"
zbus = { version = "= 4.4.0", default-features = false, features = ["tokio"] }

# Compression
bzip2 = { version = "0.4", optional = true } #TODO: replace with pure Rust crate
flate2 = "1.0"
liblzma = { version = "0.3", optional = true } #TODO: replace with pure Rust crate
tar = "0.4.43"
# Internationalization
i18n-embed = { version = "0.14", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.7"
rust-embed = "8"
slotmap = "1.0.7"
recently-used-xbel = "1.1.0"
zip = "2.1.6"
unix_permissions_ext = "0.1.2"
uzers = "0.12.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["a11y", "multi-window", "tokio", "winit", "wgpu"]

#[dependencies.iced_video_player]
#git = "https://github.com/jackpot51/iced_video_player.git"
#branch = "prev-cosmic"
#default-features = false

[dependencies.accesskit_unix]
version = "= 0.13.1"
default-features = false
features = ["tokio"]

[dependencies.smol_str]
version = "0.2.1"
features = ["serde"]

[features]
default = ["advanced", "bzip2", "desktop", "liblzma", "notify", "winit", "wgpu"]
advanced = []
desktop = ["libcosmic/desktop", "dep:xdg"]
notify = ["dep:notify-rust"]
wayland = ["libcosmic/wayland", "dep:wayland-client"]
winit = ["libcosmic/winit"]
wgpu = ["libcosmic/wgpu"]
glib = ["dep:glib"]

[profile.dev]
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[target.'cfg(unix)'.dependencies]
fork = "0.1"

[dev-dependencies]
# cap-std = "3"
# cap-tempfile = "3"
fastrand = "2"
tempfile = "3"
test-log = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }

[patch.crates-io]
# https://github.com/alexcrichton/filetime/pull/104
filetime = { git = "https://github.com/jackpot51/filetime" }

# [patch.'https://github.com/pop-os/cosmic-text']
# cosmic-text = { path = "../cosmic-text" }

# [patch.'https://github.com/pop-os/fs_extra']
# fs_extra = { path = "../fs_extra" }

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# [patch.'https://github.com/pop-os/smithay-clipboard']
# smithay-clipboard = { path = "../smithay-clipboard" }
