[package]
name = "media-browser"
version = "0.9.0"
authors = ["Alexander Schwarzkopf <progs@fangornsrealm.eu>"]
edition = "2021"
description = "Browse and play your media files, view your images, tag them and search for metadata."
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/fangornsrealm/media-browser"
repository = "https://github.com/fangornsrealm/media-browser.git"
rust-version = "1.71"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
audiotags = "0.5"
bytes = "1.9.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "6.0.0"
env_logger = "0.11"
file-format = {version = "0.26.0", features = ["reader"]}
freedesktop_entry_parser = "1.3"
fs_extra = { git = "https://github.com/pop-os/fs_extra.git" }
gio = { version = "0.20.6", optional = true }
glib = { version = "0.20.6", optional = true }
glob = "0.3"
gstreamer = "0.23"
gstreamer-app = "0.23" # appsink
gstreamer-base = "0.23" # basesrc
gstreamer-pbutils = "0.23"
gstreamer-tag = "0.23"
gst-plugin-matroska = "0.0.0"
html-escape = "0.2.13"
icu_collator = "1.5"
icu_provider = { version = "1.5", features = ["sync"] }
ignore = "0.4"
image = "0.25.5"
imagesize = "0.13.0"
lazy_static = "1"
libc = "0.2"
log = "0.4"
mime_guess = "2"
nom-exif = "2.3.0"
notify-debouncer-full = "0.3"
notify-rust = { version = "4", optional = true }
once_cell = "1.20.2"
open = "5.3.2"
paste = "1.0"
rayon = "1"
regex = "1"
rusqlite = {version = "0.33.0", features = ["bundled", "chrono"]}
rustc-hash = "2.1.0"
serde = { version = "1", features = ["serde_derive"] }
shlex = { version = "1.3" }
thiserror = "2.0.11"
tokio = { version = "1", features = ["sync", "time"] }
trash = { git = "https://github.com/jackpot51/trash-rs.git", branch = "cosmic" }
url = "2"
walkdir = "2.5.0"
wayland-client = { version = "0.31.7", optional = true }
xdg = { version = "2.5.2", optional = true }
xdg-mime = "0.4"
xml = "0.8.16"
zbus = { version = "= 4.4.0", default-features = false, features = ["tokio"] }

# Compression
bzip2 = { version = "0.5", optional = true } #TODO: replace with pure Rust crate
flate2 = "1.0"
liblzma = { version = "0.3", optional = true } #TODO: replace with pure Rust crate
tar = "0.4.43"
# Internationalization
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9"
rust-embed = "8"
slotmap = "1.0.7"
recently-used-xbel = "1.1.0"
zip = "2.1.6"
unix_permissions_ext = "0.1.2"
uzers = "0.12.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["a11y", "multi-window", "tokio", "winit", "wgpu"]

#[dependencies.iced_video_player]
#git = "https://github.com/jackpot51/iced_video_player.git"
#branch = "prev-cosmic"
#default-features = false

[dependencies.accesskit_unix]
version = "= 0.13.1"
default-features = false
features = ["tokio"]

[dependencies.smol_str]
version = "0.3.2"
features = ["serde"]

[features]
default = ["advanced", "bzip2", "desktop", "liblzma", "notify", "winit", "wgpu", "gvfs"]
advanced = []
desktop = ["libcosmic/desktop", "dep:xdg"]
notify = ["dep:notify-rust"]
wayland = ["libcosmic/wayland", "dep:wayland-client"]
winit = ["libcosmic/winit"]
wgpu = ["libcosmic/wgpu"]
glib = ["dep:glib"]
gvfs = ["dep:gio", "dep:glib"]

[profile.dev]
opt-level = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[target.'cfg(unix)'.dependencies]
fork = "0.1"

[dev-dependencies]
# cap-std = "3"
# cap-tempfile = "3"
fastrand = "2"
tempfile = "3"
test-log = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }

[patch.crates-io]
# https://github.com/alexcrichton/filetime/pull/104
filetime = { git = "https://github.com/jackpot51/filetime" }

# [patch.'https://github.com/pop-os/cosmic-text']
# cosmic-text = { path = "../cosmic-text" }

# [patch.'https://github.com/pop-os/fs_extra']
# fs_extra = { path = "../fs_extra" }

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# [patch.'https://github.com/pop-os/smithay-clipboard']
# smithay-clipboard = { path = "../smithay-clipboard" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
    [
        "target/release/media-browser",
        "usr/bin/",
        "755",
    ],
    [
        "res/eu.fangornsrealm.MediaBrowser.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "res/eu.fangornsrealm.MediaBrowser.metainfo.xml",
        "usr/share/metainfo/",
        "644",
    ],
    [
        "res/eu.fangornsrealm.MediaBrowser.svg",
        "usr/share/icons/hicolor/scalable/apps/",
        "644",
    ],
]
depends = [
    "libc6", 
    "libxkbcommon0", 
    "gstreamer1.0-plugins-base", 
    "gstreamer1.0-plugins-good", 
    "gstreamer1.0-plugins-bad", 
    "gstreamer1.0-plugins-ugly", 
    "gstreamer1.0-libav", 
    "gstreamer1.0-tools", 
    "gstreamer1.0-x", 
    "gstreamer1.0-alsa", 
    "gstreamer1.0-gl", 
    "gstreamer1.0-gtk3", 
    "gstreamer1.0-qt5", 
    "gstreamer1.0-pulseaudio", 
    ]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/media-browser", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/eu.fangornsrealm.MediaBrowser/LICENSE", doc = true, mode = "644" },
    { source = "res/eu.fangornsrealm.MediaBrowser.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "res/eu.fangornsrealm.MediaBrowser.svg", dest = "/usr/share/icons/scalable/apps/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
glibc = "*"
libxkbcommon = "*"
gstreamer1-devel  = "*"
gstreamer1-plugins-base-tools  = "*"
gstreamer1-doc  = "*"
gstreamer1-plugins-base-devel  = "*"
gstreamer1-plugins-good  = "*"
gstreamer1-plugins-good-extras  = "*"
gstreamer1-plugins-ugly  = "*"
gstreamer1-plugins-bad-free  = "*"
gstreamer1-plugins-bad-free-devel  = "*"
gstreamer1-plugins-bad-free-extras = "*"
